train swagger
