# src/api/handlers/health.go
@@ -13,10 +13,21 @@ func NewHealthHandler() *HealthHandler   {
 	return &HealthHandler{} 
 }
 
+// HealthCheck godoc
+// @Summary Health Check
+// @Description Check the server status
+// @Tags Health
+// @Accept json
+// @Produce json
+// @Success 200 {object} helper.BaseHttpResponse "Success"
+// @Failure 400 {object} helper.BaseHttpResponse "Failed"
+// @Router /v1/health [get]
 func (h *HealthHandler) Health(c *gin.Context) {
 	c.JSON(http.StatusOK, "Working!")
 	
 }
+
+
 func (h *HealthHandler) HealthPost(c *gin.Context) {
 	c.JSON(http.StatusOK, "Working Post!")
 	
